# pngoptim-swift

./: .gitignore  CLAUDE.md  LICENSE  Package.swift  README.md
.github/workflows/: ci.yml  release.yml  update.yml
Sources/CPNGOptim/: shim.c
Sources/CPNGOptim/include/: module.modulemap  pngoptim.h
Sources/PNGOptimKit/: Error.swift  Options.swift  PNGOptim.swift  Result.swift  Version.swift
Tests/PNGOptimKitTests/: PNGOptimKitTests.swift
docs/: pngoptim-swift-plan.md  usage.md
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/src/: lib.rs
scripts/: build-xcframework.sh
