[package]
name = "pngoptim-ffi"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["okooo5km(十里)"]
description = "C FFI bindings for pngoptim PNG quantization engine"

[lib]
name = "pngoptim_ffi"
crate-type = ["staticlib"]

[dependencies]
pngoptim = { git = "https://github.com/okooo5km/pngoptim.git", tag = "v0.2.1" }

[build-dependencies]
cbindgen = "0.29"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
